--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Install Antora with the Antora Lunr Extension
       run: npm i antora @antora/lunr-extension
     - name: Generate Site
-      run: npx antora antora-playbook.yml
+      run: npx antora antora-playbook.yml --stacktrace
     - name: Upload Artifacts
       uses: actions/upload-pages-artifact@v3
       with:
